--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "sell",
+  "name": "infore-wx-base",
   "version": "1.0.0",
-  "description": "sell app",
-  "author": "zhangst",
+  "description": "盈峰微信Web框架",
+  "author": "Infore Mobile",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -12,13 +12,14 @@
   },
   "dependencies": {
     "apisauce": "^0.14.1",
+    "fastclick": "^1.0.6",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
+    "normalize.css": "^7.0.0",
     "vue": "^2.4.2",
-    "vue-resource": "^1.3.4",
     "vue-router": "^2.7.0",
-    "vue2-toast": "^1.3.0",
-    "vuex": "^2.2.1"
+    "vuex": "^2.5.0",
+    "vux": "^2.6.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -35,10 +36,10 @@
     "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
     "eslint": "^3.19.0",
+    "eslint-config-standard": "^6.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-html": "^3.0.0",
-    "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
@@ -48,18 +49,21 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.2.0",
+    "px2rem-loader": "^0.1.7",
     "rimraf": "^2.6.0",
+    "semver": "^5.3.0",
+    "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.0.4",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
+    "vuex-router-sync": "^5.0.0",
+    "vux-loader": "^1.1.13",
     "webpack": "^2.6.1",
+    "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0"
